# coinapi-rs

./: .gitignore  .travis.yml  CODEOWNERS  Cargo.toml  LICENSE  README.md
src/: api.rs  client.rs  exchangerate.rs  lib.rs  metadata.rs  model.rs  ohlcv.rs
src/model/: exchangerate.rs  metadata.rs  model.rs  ohclv.rs  ohlcv.rs
